authentication-user-management/oauth-secured-identity-providers-only/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sOAuthSecuredIdentityProvidersOnly
metadata:
  name: oauth-secured-identity-providers-only
spec:
  informmentAction: dryrun
  match:
    kinds:
      - apiGroups: ["config.openshift.io"]
        kinds: ["OAuth"]
  parameters:
    # Options: HTPasswd, Keystone, LDAP, Basic Authentication, Request Header, Github, Gitlab, Google, OpenID Connect
    approvedProviders: ["OpenID"]
